--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.16.0",
+    "express": "^4.16.4",
     "ts-node": "^7.0.1"
+  },
+  "devDependencies": {
+    "typescript": "^3.2.2"
   }
 }
