--- a/client/package.json
+++ b/client/package.json
@@ -7,9 +7,12 @@
     "@types/node": "10.12.18",
     "@types/react": "16.7.20",
     "@types/react-dom": "16.0.11",
+    "axios": "^0.18.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3",
+    "react-spring": "^7.2.8",
+    "styled-components": "^4.1.3",
     "typescript": "3.2.2"
   },
   "scripts": {
@@ -26,5 +29,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/styled-components": "^4.1.6"
+  }
 }
