--- a/server/package.json
+++ b/server/package.json
@@ -11,10 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.16.0",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "ts-node": "^7.0.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.4",
     "typescript": "^3.2.2"
   }
 }
